--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -54,6 +54,8 @@ jobs:
       - name: Run E2E Tests - File System
         id: fsTest
         run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit
+      - name: Run E2E Tests - File System Report
+        run: echo "cat logs/playwright-fs-test.txt"
       - name: Run E2E Tests - Azure
         id: azureTest
         env:
