--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
+      - ./logs:/logs
     working_dir: /app
     environment:
       - CI=${CI}
@@ -28,6 +29,6 @@ services:
       - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
       - TEST_REPORT_JSON=fs-test-report.json
       - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
-    command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npm test --workers=1"
+    command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npx playwright test --workers=1 > /logs/playwright-fs-test.txt"
     networks:
       - e2e-fs-network
