--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -51,11 +51,13 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install podman compose
         run: pip3 install podman-compose
+      - name: Create folder
+        run: mkdir -p logs
       - name: Run E2E Tests - File System
         id: fsTest
-        run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Run E2E Tests - File System Report
-        run: echo "cat logs/playwright-fs-test.txt"
+        run: |
+          podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit > /dev/null
+          cat logs/playwright-fs-test.txt && exit $?
       - name: Run E2E Tests - Azure
         id: azureTest
         env:
