--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -56,20 +56,23 @@ jobs:
       - name: Run E2E Tests - File System
         id: fsTest
         run: |
-          podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit > /dev/null
-          cat logs/playwright-fs-test.txt && exit $?
-      - name: Run E2E Tests - Azure
-        id: azureTest
-        env:
-          AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Run E2E Tests - AWS
-        id: awsTest
-        run: podman-compose -f docker-compose.e2e.aws.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Tear Down Containers
-        run: podman-compose -f docker-compose.e2e.yml -f docker-compose.e2e.azure.yml -f docker-compose.e2e.aws.yml down
+          podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit &>/dev/null
+          exitcode="$?"
+          cat logs/playwright-fs-test.txt >> $GITHUB_OUTPUT
+          exit "$exitcode"
+      # - name: Run E2E Tests - Azure
+      #   id: azureTest
+      #   env:
+      #     AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+      #   run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright --abort-on-container-exit
+      # - name: Run E2E Tests - AWS
+      #   id: awsTest
+      #   run: podman-compose -f docker-compose.e2e.aws.yml up --build --exit-code-from playwright --abort-on-container-exit
+      # - name: Tear Down Containers
+      #   run: podman-compose -f docker-compose.e2e.yml -f docker-compose.e2e.azure.yml -f docker-compose.e2e.aws.yml down
     outputs:
-     actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' || steps.awsTest.conclusion == 'failure' }}
+      actualResult: ${{ steps.fsTest.conclusion != 'failure' }}
+    #  actualResult: ${{ steps.fsTest.conclusion == 'failure' || steps.azureTest.conclusion == 'failure' || steps.awsTest.conclusion == 'failure' }}
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
