--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit &>/dev/null
           exitcode="$?"
-          cat logs/playwright-fs-test.txt >> $GITHUB_OUTPUT
+          cat logs/playwright-fs-test.txt
           exit "$exitcode"
       # - name: Run E2E Tests - Azure
       #   id: azureTest
