--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Run E2E Tests - File System
         id: fsTest
         run: |
-          podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit &>/dev/null
+          podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit
           exitcode="$?"
           cat logs/playwright-fs-test.txt
           exit "$exitcode"
