--- a/upload-server/docker-compose.e2e.aws.yml
+++ b/upload-server/docker-compose.e2e.aws.yml
@@ -5,9 +5,9 @@ services:
   minio:
     image: quay.io/minio/minio
     container_name: minio-test
-    command: server /data --console-address :8001 --address :8000
     volumes:
       - ./configs/local/minio:/data
+    command: server /data --console-address :8001 --address :8000
     networks:
       - e2e-aws-network
   upload-server:
@@ -42,9 +42,8 @@ services:
       - CI=${CI}
       - SERVER_URL=http://upload-server-aws:8080
       - UI_URL=http://upload-server-aws:8081
-      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
-      - TEST_REPORT_JSON=aws-test-report.json
-      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
-    command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npm test --workers=1"
+      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-aws-test-report.json}
+      - TEST_REPORT_GITHUB=${TEST_REPORT_GITHUB:-aws-github-report.txt}
+    command: /bin/sh -c "npm run test:docker"
     networks:
       - e2e-aws-network
