--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -20,15 +20,13 @@ services:
     volumes:
       - ../tests/smoke/playwright:/app
       - /app/node_modules
-      - ./logs:/logs
     working_dir: /app
     environment:
       - CI=${CI}
       - SERVER_URL=http://upload-server-fs:8080
       - UI_URL=http://upload-server-fs:8081
-      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-./test-reports}
-      - TEST_REPORT_JSON=fs-test-report.json
-      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-./test-results}
-    command: /bin/sh -c "npm install; ./wait-for-it.sh $$UI_URL; npx playwright test --workers=1 > /logs/playwright-fs-test.txt"
+      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-fs-test-report.json}
+      - TEST_REPORT_GITHUB=${TEST_REPORT_GITHUB:-fs-github-report.txt}
+    command: /bin/sh -c "npm run test:docker"
     networks:
       - e2e-fs-network
