--- a/upload-server/docker-compose.e2e.azure.yml
+++ b/upload-server/docker-compose.e2e.azure.yml
@@ -40,7 +40,7 @@ services:
       - UI_URL=http://upload-server-azure:8081
       - TEST_REPORT_JSON=${TEST_REPORT_JSON:-azure-test-report.json}
       - TEST_REPORT_GITHUB=${TEST_REPORT_GITHUB:-azure-github-report.txt}
-    command: /bin/sh -c "npm run test:docker"
+    command: npm run test:docker
     networks:
       - e2e-azure-network
    
