--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -43,69 +43,25 @@ jobs:
         run: go tool cover -func=c.out
   e2e-tests-fs:
     name: E2E Tests - File System Storage
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      CI: true
-      REPORT_DIRECTORY: ${{ github.workspace }}/tests/smoke/playwright/test-reports
-      TEST_REPORT_GITHUB: fs-github-report.txt
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      - name: Run E2E Tests
-        id: test
-        run: podman-compose -f docker-compose.e2e.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Test Report
-        run: cat ${{ env.REPORT_DIRECTORY }}/${{ env.TEST_REPORT_GITHUB }}
-      - name: Tear Down Containers
-        run: podman-compose -f docker-compose.e2e.yml down
-    outputs:
-      actualResult: ${{ steps.test.conclusion }}
+    uses: ./.github/workflows/e2e-test-template.yml
+    with:
+      STORAGE_TYPE: fs
+      DOCKER_FILENAME: docker-compose.e2e.yml
+    secrets: inherit
   e2e-tests-azure:
     name: E2E Tests - Azure Blob Storage
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      CI: true
-      REPORT_DIRECTORY: ${{ github.workspace }}/tests/smoke/playwright/test-reports
-      TEST_REPORT_GITHUB: azure-github-report.txt
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      - name: Run E2E Tests
-        id: test
-        env:
-          AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-        run: podman-compose -f docker-compose.e2e.azure.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Test Report
-        run: cat ${{ env.REPORT_DIRECTORY }}/${{ env.TEST_REPORT_GITHUB }}
-      - name: Tear Down Containers
-        run: podman-compose -f docker-compose.e2e.azure.yml down
-    outputs:
-      actualResult: ${{ steps.test.conclusion }}
+    uses: ./.github/workflows/e2e-test-template.yml    
+    with:
+      DOCKER_FILENAME: docker-compose.e2e.azure.yml
+      STORAGE_TYPE: azure
+    secrets: inherit
   e2e-tests-aws:
     name: E2E Tests - AWS S3 Storage
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      CI: true
-      REPORT_DIRECTORY: ${{ github.workspace }}/tests/smoke/playwright/test-reports
-      TEST_REPORT_GITHUB: aws-github-report.txt
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      - name: Run E2E Tests
-        id: test
-        run: podman-compose -f docker-compose.e2e.aws.yml up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Test Report
-        run: cat ${{ env.REPORT_DIRECTORY }}/${{ env.TEST_REPORT_GITHUB }}
-      - name: Tear Down Containers
-        run: podman-compose -f docker-compose.e2e.aws.yml down
-    outputs:
-      actualResult: ${{ steps.test.conclusion }}
+    uses: ./.github/workflows/e2e-test-template.yml
+    with:
+      DOCKER_FILENAME: docker-compose.e2e.aws.yml
+      STORAGE_TYPE: aws
+    secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
