--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -27,6 +27,6 @@ services:
       - UI_URL=http://upload-server-fs:8081
       - TEST_REPORT_JSON=${TEST_REPORT_JSON:-fs-test-report.json}
       - TEST_REPORT_GITHUB=${TEST_REPORT_GITHUB:-fs-github-report.txt}
-    command: /bin/sh -c "npm run test:docker"
+    command: npm run test:docker
     networks:
       - e2e-fs-network
