--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -10,6 +10,10 @@ on:
         type: string
         required: true
 
+defaults:
+  run:
+    working-directory: upload-server/
+
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest
@@ -24,14 +28,10 @@ jobs:
         run: pip3 install podman-compose
       - name: Run E2E Tests
         id: test
-        env:
-          COMPOSE_FILE: ${{ inputs.COMPOSE_FILENAME }}
-        run: podman-compose up --build --exit-code-from playwright --abort-on-container-exit
+        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright --abort-on-container-exit
       - name: Test Report
         run: cat ${{ github.workspace }}/tests/smoke/playwright/test-reports/${{ env.TEST_REPORT_GITHUB }}
       - name: Tear Down Containers
-        env:
-          COMPOSE_FILE: ${{ inputs.COMPOSE_FILENAME }}
-        run: podman-compose down
+        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} down
     outputs:
       actualResult: ${{ steps.test.conclusion }}
