--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -17,11 +17,10 @@ defaults:
 jobs:
   e2e-tests:
     runs-on: ubuntu-latest
-    continue-on-error: true
     env:
       CI: true
       AZURITE_STORAGE_KEY: ${{ (inputs.STORAGE_TYPE == 'azure') && secrets.AZURITE_STORAGE_KEY }}
-      TEST_REPORT_GITHUB: ${{ inputs.STORAGE_TYPE}}-github-report.txt
+      TEST_REPORT_GITHUB: ${{ inputs.STORAGE_TYPE}}-github-report.md
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
@@ -32,6 +31,8 @@ jobs:
       - name: Tear Down Containers
         run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} down
       - name: Test Report
-        run: echo $GITHUB_STEP_SUMMARY
+        id: summary
+        run: cat ${{ github.workspace }}/tests/smoke/playwright/test-reports/${{ env.TEST_REPORT_GITHUB }}
     outputs:
-      actualResult: ${{ steps.test.conclusion }}
+      conclusion: ${{ steps.test.conclusion }}
+      summary: ${{ steps.summary.outputs }}
