--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Run E2E Tests
         id: test
         run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright --abort-on-container-exit
+      - name: Test Report
+        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} logs -f playwright
       - name: Tear Down Containers
         run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} down
-      - name: Test Report
-        id: summary
-        run: |
-          echo "# ${{ inputs.TEST_TITLE }}" > $GITHUB_STEP_SUMMARY
-          awk -v ORS='\n\n' 1 ${{ github.workspace }}/tests/smoke/playwright/test-reports/${{ env.TEST_REPORT_GITHUB }} > $GITHUB_STEP_SUMMARY
+      # - name: Test Report
+      #   id: summary
+      #   run: |
+      #     echo "# ${{ inputs.TEST_TITLE }}" > $GITHUB_STEP_SUMMARY
+      #     awk -v ORS='\n\n' 1 ${{ github.workspace }}/tests/smoke/playwright/test-reports/${{ env.TEST_REPORT_GITHUB }} > $GITHUB_STEP_SUMMARY
     outputs:
       actualResult: ${{ steps.test.conclusion }}
