--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -45,7 +45,7 @@ jobs:
     name: E2E Tests - File System Storage
     uses: ./.github/workflows/e2e-test-template.yml
     with:
-      TEST_TITLE: E2E Tests - File System Storage
+      TEST_TITLE: E2E FS Tests
       STORAGE_TYPE: fs
       COMPOSE_FILENAME: ./docker-compose.e2e.yml
     secrets: inherit
@@ -53,7 +53,7 @@ jobs:
     name: E2E Tests - Azure Blob Storage
     uses: ./.github/workflows/e2e-test-template.yml    
     with:
-      TEST_TITLE: E2E Tests - Azure Blob Storage
+      TEST_TITLE: E2E Azure Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.azure.yml
       STORAGE_TYPE: azure
     secrets: inherit
@@ -61,7 +61,7 @@ jobs:
     name: E2E Tests - AWS S3 Storage
     uses: ./.github/workflows/e2e-test-template.yml
     with:
-      TEST_TITLE: E2E Tests - AWS S3 Storage
+      TEST_TITLE: E2E AWS Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.aws.yml
       STORAGE_TYPE: aws
     secrets: inherit
