add type identification function to Source and Destination

--- a/upload-server/.gitignore
+++ b/upload-server/.gitignore
@@ -3,6 +3,8 @@
 # local uploads folders
 uploads/*
 cmd/tests/*
+testing/test
+
 
 # ref: https://raw.githubusercontent.com/github/gitignore/main/Go.gitignore
 
