--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -1,26 +1,4 @@
 services:
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    ports:
-      - 9090:9090
-    restart: unless-stopped
-    volumes:
-      - ./configs/local/prometheus:/etc/prometheus
-      - prom_data:/prometheus
-  grafana:
-    image: grafana/grafana
-    container_name: grafana
-    ports:
-      - 3000:3000
-    restart: unless-stopped
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=grafana
-    volumes:
-      - ./configs/local/grafana/provisioning:/etc/grafana/provisioning
   cache:
     image: redis:alpine
     container_name: cache
@@ -37,12 +15,10 @@ services:
     working_dir: /code
     environment:
       - REDIS_CONNECTION_STRING=redis://redispw@cache:6379
-      # Generate a random 32-byte string here https://generate-random.org/encryption-key-generator?count=1&bytes=32&cipher=aes-256-cbc&string=&password=
-      - CSRF_TOKEN=${CSRF_TOKEN}
     ports:
       - ${SERVER_PORT:-8080}:${SERVER_PORT:-8080}
       - ${UI_PORT:-8081}:${UI_PORT:-8081}
-    command: /bin/sh -c "./run-server.sh"
+    command: /bin/sh -c "go build -o phdou ./cmd && ./phdou"
     depends_on:
       - cache
 volumes:
