--- a/upload-server/docker-compose.e2e.minio.yml
+++ b/upload-server/docker-compose.e2e.minio.yml
@@ -18,7 +18,8 @@ services:
       - ../upload-configs:/upload-configs
     working_dir: /code
     environment:
-      - SERVER_HOSTNAME=upload-server-minio
+      - UI_SERVER_EXTERNAL_HOST=upload-server-minio:8080
+      - UI_SERVER_INTERNAL_HOST=upload-server-minio:8080
       - S3_ENDPOINT=http://minio:8000
       - S3_BUCKET_NAME=test-bucket
       - AWS_REGION=us-east-1
