UPLOAD-1798/gha-playwright (#528)
* create compose file for running playwright tests; one for each storage type
* added script for waiting for the UI server to start up and added it as a script to the playwright package.json
* created e2e-test-template job
* added e2e test job for each storage type to tus-upload-server-ci
* copied the test upload file into the playwright directory
* removed the endpoint field from the form because setting it is unnecessary and possibly destructive 

Co-authored-by: David Gage <whytheplatypus@gmail.com>

--- a/upload-server/docker-compose.minio.yml
+++ b/upload-server/docker-compose.minio.yml
@@ -1,9 +1,10 @@
 services:
   minio:
     image: quay.io/minio/minio
+    hostname: minio
     ports:
-      - "8000:8000"
-      - "8001:8001"
+      - 8000:8000
+      - 8001:8001
     command: server /data --console-address :8001 --address :8000
     volumes:
       - ./configs/local/minio:/data
