--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -24,18 +24,30 @@ jobs:
     env:
       CI: true
       AZURITE_STORAGE_KEY: ${{ (inputs.STORAGE_TYPE == 'azure') && secrets.AZURITE_STORAGE_KEY }}
+      TEST_REPORTS_DIR: ../tests/smoke/playwright/test-reports/${{ inputs.STORAGE_TYPE }}/
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
         run: pip3 install podman-compose
       - name: Run E2E Tests
         id: test
-        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright --abort-on-container-exit
-      - name: Test Report
+        run:
+          podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright
+          --abort-on-container-exit
+      - name: Print Test Report
         # Piping the logs through perl so that we can append the TEST_TITLE to make where they are coming from clearer
         # The only annotation types produced by the `github` report are 'debug', 'notice', 'warning', and 'error' so this should cover them all
-        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} logs -f playwright | perl -pe 's/::(debug|notice|warning|error) title=/$&\[${{ inputs.TEST_TITLE }}\] /g'
+        run:
+          podman-compose -f ${{ inputs.COMPOSE_FILENAME }} logs -f playwright | perl -pe
+          's/::(debug|notice|warning|error) title=/$&\[${{ inputs.TEST_TITLE }}\] /g'
       - name: Tear Down Containers
         run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} down
+      - name: Upload Report
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: playwright-report-${{ inputs.STORAGE_TYPE }}
+          path: ${{ env.TEST_REPORTS_DIR }}
+          retention-days: 30
     outputs:
       actualResult: ${{ steps.test.conclusion }}
