--- a/upload-server/docker-compose.e2e.azurite.yml
+++ b/upload-server/docker-compose.e2e.azurite.yml
@@ -33,15 +33,16 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-azurite
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-azurite:8080
       - UI_URL=http://upload-server-azurite:8081
       - TEST_REPORT_JSON=${TEST_REPORT_JSON:-azurite-test-report.json}
+      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-/playwright/test-reports/azure/}
+      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-/playwright/test-results/azure/}
     command: npm run test:docker
     networks:
       - e2e-azurite-network
-   
