--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -21,14 +21,16 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-fs
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-fs:8080
       - UI_URL=http://upload-server-fs:8081
       - TEST_REPORT_JSON=${TEST_REPORT_JSON:-fs-test-report.json}
+      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-/playwright/test-reports/fs/}
+      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-/playwright/test-results/fs/}
     command: npm run test:docker
     networks:
       - e2e-fs-network
